--- a/src/componentes/Input/Input.css
+++ b/src/componentes/Input/Input.css
@@ -1,27 +1,27 @@
-/* Input.css */
-.input-container {
-  background-color: #222;
+.input-container { /*campo envolta do input*/
   color: #fff;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
 }
 
-.input-container input{
-  background-color: #333;
+.input-container input {  /*input*/
+  background-color: transparent;
+  box-sizing: border-box;
+  width: 100%;
   color: #fff;
   border: none;
+  border: 1px solid #ffffff36;
+  border-radius: 5px;
   outline: none;
   padding: 10px;
-  margin-bottom: 15px;
-  border-radius: 5px;
+  margin: 10px 0;
   font-size: 1.1rem;
 }
-.input-container input::placeholder{
+.input-container input::placeholder { /*placeholder do input*/
   color: #ffffffb2;
 }
 
-.input-container label {
+.input-container label {  /*label do input*/
   display: block;
-  margin-bottom: 5px;
-  font-size: 1.5rem;
+  margin: 10px 0 0 0;
 }
+
